--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Great things will be built here. Please be patient. :)
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://docs.perlang.org">
+        <script type="text/javascript">
+            window.location.href = "https://docs.perlang.org"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, follow this <a href='https://docs.perlang.org'>link to docs.perlang.org</a>.
+    </body>
+</html>
