index.html: Change www.perlang.org to redirect to GitHub repo
The previous semantics was to let www.perlang.org -> docs.perlang.org,
but perlang.org -> GitHub repo. This feels quite inconsistent; this
commit tries to get rid of this inconsistency.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://docs.perlang.org">
+        <meta http-equiv="refresh" content="0; url=https://perlang.org">
         <script type="text/javascript">
-            window.location.href = "https://docs.perlang.org"
+            window.location.href = "https://perlang.org"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='https://docs.perlang.org'>link to docs.perlang.org</a>.
+        If you are not redirected automatically, follow <a href='https://perlang.org'>this link to perlang.org</a>.
     </body>
 </html>
